Fix text alignment issues with <sup>

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -87,6 +87,10 @@ p {
   margin-bottom: 0.25rem;
 }
 
+sup {
+  line-height: 0;
+}
+
 .home {
   display: flex;
   justify-content: center;
